--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
-Package: rinterferenceSim
+Package: interferenceSim
 Type: Package
-Title: Rinterference Simulations
+Title: interference Simulations
 Version: 0.1
 Date: 2014-10-01
 Author: Bradley Saul
 Maintainer: Bradley Saul <saulb@live.unc.edu>
-Description: creates simulations for rinterference
-Depends:
-   rinterference(>= 0.3.1),
-   plyr(>= 1.8.1)
+Description: creates simulations for interference
+Imports:
+    plyr(>= 1.8.1)
 License: MIT
+RoxygenNote: 5.0.1
